--- a/config/database.yml
+++ b/config/database.yml
@@ -18,10 +18,14 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  collation: fr_FR.UTF-8
+  ctype: fr_FR.UTF-8
 
 development:
   <<: *default
   database: coworkers_development
+  collation: fr_FR.UTF-8
+  ctype: fr_FR.UTF-8
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -56,7 +60,8 @@ development:
 test:
   <<: *default
   database: coworkers_test
-
+  collation: fr_FR.UTF-8
+  ctype: fr_FR.UTF-8
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -82,3 +87,5 @@ production:
   database: coworkers_production
   username: coworkers
   password: <%= ENV["COWORKERS_DATABASE_PASSWORD"] %>
+  collation: fr_FR.UTF-8
+  ctype: fr_FR.UTF-8
