--- a/config/meta.yml
+++ b/config/meta.yml
@@ -6,6 +6,6 @@ meta_title: "Coworkers – Partagez votre workspace"
 
 meta_description: "Coworkers est une platforme de partage d'espace de travail."
 
-meta_image: "app/assets/images/logo.png" # should exist in `app/assets/images/`
+meta_image: "logo.png" # should exist in `app/assets/images/`
 
 twitter_account: "@product_twitter_account" # required for Twitter Cards
